# GPU-Weighted-GMM

./: .gitignore  LICENSE
common/: cudaReduction.cuh  cudaTypeDef.cuh
hipifly/: hipifly.hpp
histogram/: histogram.cu  histogram.cuh  histogramConfig.cuh
test/: CMakeLists.txt  testGMM.cu  testHistogram.cpp  testHistogram2D.cpp  testHistogram3D.cpp
weighted-GMM/: GMMConfig.cuh  cudaGMM.cuh  cudaGMMUtility.cuh  cudaGMMkernel.cuh
weighted-GMM/internal/: cudaReduction.cuh  cudaTypeDef.cuh
